# word-count-reporter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  example_inputfile.txt  index.html  inputfile.py  pyproject.toml  report.css  report.php  report_template.html  requirements-dev.txt  requirements.txt  style.css  upload.php  word_count_reporter.py
assets/: style.css
example_files/: example_inputfile.json  fishing_doc.json  fishing_doc_parts.json
example_files/lorem_ipsum/: Chapter1.txt  Chapter10.txt  Chapter11.txt  Chapter12.txt  Chapter13.txt  Chapter14.txt  Chapter2.txt  Chapter3.txt  Chapter4.txt  Chapter5.txt  Chapter6.txt  Chapter7.txt  Chapter8.txt  Chapter9.txt  test.docx
examples/notes-for-the-stranger/: manifest.json
examples/notes-for-the-stranger/docs/: 01-11-pm-on-a-tuesday.txt  02-your-future-self-does-not-remember.md  03-the-myth-of-obvious.rtf  04-the-comment-that-prevented-a-bug.txt  05-why-not-just-what.md  06-a-warning-is-a-gift.docx  07-the-person-who-never-thanks-you.txt  08-documentation-as-quiet-legacy.md  09-what-you-leave-behind.rtf
examples/the-fishing-book/: manifest.json
examples/the-fishing-book/docs/: 01-reading-the-water.txt  02-knots-that-hold.md  02a-palomar-diagram.docx  03-catch-and-release.txt  04-the-weather-whisperer.rtf  05-the-anglers-toolkit.docx  content.rtf
lorem_ipsum/: Chapter2.txt  Chapter8.txt  Chapter9.txt
report_templates/assets/: scripts.js
src/word_count_reporter/: __init__.py  __main__.py  cli.py
src/word_count_reporter/utils/: __init__.py
web_ui/: index.html  upload.php
